--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -11,6 +11,7 @@
 .contactForm {
   display: flex;
   flex-direction: column;
+  padding-top: 3rem;
 }
 
 input,
